--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 narwhals==1.42.1
-numpy==1.24.4
+numpy>=2.1,<3
 packaging==24.2
 pandas==2.0.3
 pillow==10.4.0
